[gd_scene load_steps=4 format=3 uid="uid://bea725mqj26pf"]

[ext_resource type="Script" uid="uid://dugx6i0it8bt2" path="res://scripts/enemy/boss_enemy.gd" id="1_boss"]

[sub_resource type="CircleShape2D" id="CircleShape2D_boss"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_boss_hitbox"]
radius = 30.0

[node name="BossEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_boss")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_boss")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.5, 0, 0.5, 1)
scale = Vector2(2, 2)

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_boss_hitbox")

[node name="ProjectileSpawn1" type="Marker2D" parent="."]
position = Vector2(0, -15)

[node name="ProjectileSpawn2" type="Marker2D" parent="."]
position = Vector2(-10, -15)

[node name="ProjectileSpawn3" type="Marker2D" parent="."]
position = Vector2(10, -15)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="HitBox" to="." method="_on_hitbox_body_entered"]
